docs/field-test/v0.3.0/generated-results.md
# Field-Test Results (generated) — v0.3.0

<!-- generated by scripts/generate_field_test_report.py, do not hand-edit -->

Generated: 2026-09-11T23:24:50Z

Numeric tables derived from `field-test/results/0.3.0/**/results.jsonl`.
Do not hand-edit; re-run `scripts/generate_field_test_report.py`.

## Model totals

| Model | Trajectories |
|-------|--------------|
| Llama-3.2-3B (OMLX) | 1,093 |
| Qwen3-4B (OMLX) | 1,156 |
| gpt-4o-mini | 1,156 |
| llama-3.1-8b | 1,132 |
| **Total** | **4,537** |

## Llama-3.2-3B (OMLX)

| Corpus | Traj | Pass | Fail | Inconcl. | Gate-dropped | Pass rate [95% CI] |
|--------|------|------|------|----------|--------------|--------------------|
| adapters | 18 | 0 | 0 | 15 | 0 | 0% [0%-100%] (n=0) |
| adversarial/contradiction | 10 | 0 | 4 | 6 | 0 | 0% [0%-49%] (n=4) |
| adversarial/injection | 10 | 0 | 10 | 0 | 0 | 0% [0%-28%] (n=10) |
| adversarial/misleading | 10 | 0 | 0 | 6 | 0 | 0% [0%-100%] (n=0) |
| adversarial/poisoning | 10 | 0 | 2 | 6 | 0 | 0% [0%-66%] (n=2) |
| adversarial/unsafe | 10 | 0 | 5 | 5 | 0 | 0% [0%-43%] (n=5) |
| corrections | 5 | 2 | 0 | 3 | 0 | 100% [34%-100%] (n=2) |
| failures/negative | 60 | 0 | 0 | 0 | 60 | 0% [0%-100%] (n=0) |
| failures/positive | 50 | 5 | 24 | 18 | 0 | 17% [8%-35%] (n=29) |
| golden | 10 | 1 | 3 | 6 | 0 | 25% [5%-70%] (n=4) |
| lifecycle | 40 | 0 | 27 | 11 | 0 | 0% [0%-12%] (n=27) |
| mcp | 20 | 0 | 4 | 15 | 0 | 0% [0%-49%] (n=4) |
| nearmiss | 50 | 1 | 2 | 10 | 37 | 33% [6%-79%] (n=3) |
| noisy | 5 | 0 | 0 | 5 | 0 | 0% [0%-100%] (n=0) |
| otel | 20 | 0 | 20 | 0 | 0 | 0% [0%-16%] (n=20) |
| packs | 40 | 0 | 33 | 7 | 0 | 0% [0%-10%] (n=33) |
| public/counterexample | 20 | 0 | 9 | 10 | 0 | 0% [0%-30%] (n=9) |
| public/domains | 50 | 0 | 12 | 37 | 0 | 0% [0%-24%] (n=12) |
| public/golden | 10 | 0 | 2 | 6 | 0 | 0% [0%-66%] (n=2) |
| public/nearmiss | 20 | 0 | 0 | 0 | 20 | 0% [0%-100%] (n=0) |
| public/staleness | 10 | 0 | 0 | 10 | 0 | 0% [0%-100%] (n=0) |
| public/synthetic | 30 | 0 | 20 | 8 | 0 | 0% [0%-16%] (n=20) |
| raw/ci | 47 | 0 | 10 | 37 | 0 | 0% [0%-28%] (n=10) |
| raw/corrections | 5 | 3 | 0 | 2 | 0 | 100% [44%-100%] (n=3) |
| raw/cross-session | 5 | 0 | 3 | 2 | 0 | 0% [0%-56%] (n=3) |
| raw/opencode | 25 | 4 | 12 | 9 | 0 | 25% [10%-50%] (n=16) |
| raw/sibling-repos | 10 | 2 | 0 | 8 | 0 | 100% [34%-100%] (n=2) |
| raw/synthetic | 145 | 32 | 38 | 71 | 0 | 46% [35%-57%] (n=70) |
| reference-expansion | 288 | 4 | 96 | 183 | 0 | 4% [2%-10%] (n=100) |
| successes | 60 | 0 | 0 | 0 | 60 | 0% [0%-100%] (n=0) |

## Qwen3-4B (OMLX)

| Corpus | Traj | Pass | Fail | Inconcl. | Gate-dropped | Pass rate [95% CI] |
|--------|------|------|------|----------|--------------|--------------------|
| adapters | 18 | 0 | 0 | 18 | 0 | 0% [0%-100%] (n=0) |
| adversarial/contradiction | 10 | 0 | 2 | 8 | 0 | 0% [0%-66%] (n=2) |
| adversarial/injection | 10 | 0 | 10 | 0 | 0 | 0% [0%-28%] (n=10) |
| adversarial/misleading | 10 | 0 | 3 | 7 | 0 | 0% [0%-56%] (n=3) |
| adversarial/poisoning | 10 | 0 | 1 | 9 | 0 | 0% [0%-79%] (n=1) |
| adversarial/unsafe | 10 | 0 | 2 | 8 | 0 | 0% [0%-66%] (n=2) |
| corrections | 5 | 0 | 0 | 4 | 0 | 0% [0%-100%] (n=0) |
| failures/negative | 60 | 0 | 0 | 0 | 60 | 0% [0%-100%] (n=0) |
| failures/positive | 50 | 3 | 28 | 19 | 0 | 10% [3%-25%] (n=31) |
| golden | 10 | 1 | 3 | 6 | 0 | 25% [5%-70%] (n=4) |
| lifecycle | 40 | 0 | 9 | 31 | 0 | 0% [0%-30%] (n=9) |
| mcp | 20 | 0 | 5 | 15 | 0 | 0% [0%-43%] (n=5) |
| nearmiss | 50 | 1 | 2 | 9 | 37 | 33% [6%-79%] (n=3) |
| noisy | 5 | 0 | 0 | 5 | 0 | 0% [0%-100%] (n=0) |
| otel | 20 | 0 | 0 | 20 | 0 | 0% [0%-100%] (n=0) |
| packs | 40 | 0 | 30 | 10 | 0 | 0% [0%-11%] (n=30) |
| public/counterexample | 20 | 0 | 7 | 13 | 0 | 0% [0%-35%] (n=7) |
| public/domains | 50 | 0 | 15 | 35 | 0 | 0% [0%-20%] (n=15) |
| public/golden | 10 | 1 | 2 | 7 | 0 | 33% [6%-79%] (n=3) |
| public/nearmiss | 20 | 0 | 0 | 0 | 20 | 0% [0%-100%] (n=0) |
| public/staleness | 10 | 0 | 0 | 10 | 0 | 0% [0%-100%] (n=0) |
| public/synthetic | 30 | 0 | 5 | 25 | 0 | 0% [0%-43%] (n=5) |
| raw/ci | 110 | 0 | 13 | 97 | 0 | 0% [0%-23%] (n=13) |
| raw/corrections | 5 | 0 | 0 | 4 | 0 | 0% [0%-100%] (n=0) |
| raw/cross-session | 5 | 0 | 5 | 0 | 0 | 0% [0%-43%] (n=5) |
| raw/opencode | 25 | 3 | 14 | 8 | 0 | 18% [6%-41%] (n=17) |
| raw/sibling-repos | 10 | 0 | 0 | 9 | 0 | 0% [0%-100%] (n=0) |
| raw/synthetic | 145 | 12 | 37 | 90 | 0 | 24% [15%-38%] (n=49) |
| reference-expansion | 288 | 9 | 125 | 152 | 0 | 7% [4%-12%] (n=134) |
| successes | 60 | 0 | 0 | 0 | 60 | 0% [0%-100%] (n=0) |

## gpt-4o-mini

| Corpus | Traj | Pass | Fail | Inconcl. | Gate-dropped | Pass rate [95% CI] |
|--------|------|------|------|----------|--------------|--------------------|
| adapters | 18 | 0 | 0 | 18 | 0 | 0% [0%-100%] (n=0) |
| adversarial/contradiction | 10 | 0 | 1 | 9 | 0 | 0% [0%-79%] (n=1) |
| adversarial/injection | 10 | 0 | 10 | 0 | 0 | 0% [0%-28%] (n=10) |
| adversarial/misleading | 10 | 0 | 4 | 6 | 0 | 0% [0%-49%] (n=4) |
| adversarial/poisoning | 10 | 0 | 2 | 8 | 0 | 0% [0%-66%] (n=2) |
| adversarial/unsafe | 10 | 0 | 0 | 10 | 0 | 0% [0%-100%] (n=0) |
| corrections | 5 | 2 | 0 | 3 | 0 | 100% [34%-100%] (n=2) |
| failures/negative | 60 | 0 | 0 | 0 | 60 | 0% [0%-100%] (n=0) |
| failures/positive | 50 | 4 | 19 | 27 | 0 | 17% [7%-37%] (n=23) |
| golden | 10 | 1 | 3 | 6 | 0 | 25% [5%-70%] (n=4) |
| lifecycle | 40 | 0 | 0 | 40 | 0 | 0% [0%-100%] (n=0) |
| mcp | 20 | 0 | 5 | 15 | 0 | 0% [0%-43%] (n=5) |
| nearmiss | 50 | 1 | 2 | 10 | 37 | 33% [6%-79%] (n=3) |
| noisy | 5 | 0 | 0 | 5 | 0 | 0% [0%-100%] (n=0) |
| otel | 20 | 0 | 0 | 20 | 0 | 0% [0%-100%] (n=0) |
| packs | 40 | 0 | 40 | 0 | 0 | 0% [0%-9%] (n=40) |
| public/counterexample | 20 | 0 | 7 | 13 | 0 | 0% [0%-35%] (n=7) |
| public/domains | 50 | 0 | 5 | 45 | 0 | 0% [0%-43%] (n=5) |
| public/golden | 10 | 2 | 2 | 6 | 0 | 50% [15%-85%] (n=4) |
| public/nearmiss | 20 | 0 | 0 | 0 | 20 | 0% [0%-100%] (n=0) |
| public/staleness | 10 | 0 | 0 | 10 | 0 | 0% [0%-100%] (n=0) |
| public/synthetic | 30 | 0 | 0 | 30 | 0 | 0% [0%-100%] (n=0) |
| raw/ci | 110 | 0 | 0 | 110 | 0 | 0% [0%-100%] (n=0) |
| raw/corrections | 5 | 2 | 0 | 3 | 0 | 100% [34%-100%] (n=2) |
| raw/cross-session | 5 | 0 | 4 | 1 | 0 | 0% [0%-49%] (n=4) |
| raw/opencode | 25 | 7 | 10 | 8 | 0 | 41% [22%-64%] (n=17) |
| raw/sibling-repos | 10 | 2 | 0 | 8 | 0 | 100% [34%-100%] (n=2) |
| raw/synthetic | 145 | 21 | 36 | 88 | 0 | 37% [26%-50%] (n=57) |
| reference-expansion | 288 | 9 | 110 | 169 | 0 | 8% [4%-14%] (n=119) |
| successes | 60 | 0 | 0 | 0 | 60 | 0% [0%-100%] (n=0) |

## llama-3.1-8b

| Corpus | Traj | Pass | Fail | Inconcl. | Gate-dropped | Pass rate [95% CI] |
|--------|------|------|------|----------|--------------|--------------------|
| adapters | 18 | 0 | 0 | 18 | 0 | 0% [0%-100%] (n=0) |
| adversarial/contradiction | 10 | 0 | 3 | 7 | 0 | 0% [0%-56%] (n=3) |
| adversarial/injection | 10 | 0 | 10 | 0 | 0 | 0% [0%-28%] (n=10) |
| adversarial/misleading | 10 | 0 | 5 | 5 | 0 | 0% [0%-43%] (n=5) |
| adversarial/poisoning | 10 | 0 | 2 | 8 | 0 | 0% [0%-66%] (n=2) |
| adversarial/unsafe | 10 | 0 | 1 | 9 | 0 | 0% [0%-79%] (n=1) |
| corrections | 5 | 1 | 0 | 4 | 0 | 100% [21%-100%] (n=1) |
| failures/negative | 60 | 0 | 0 | 0 | 60 | 0% [0%-100%] (n=0) |
| failures/positive | 26 | 3 | 10 | 13 | 0 | 23% [8%-50%] (n=13) |
| golden | 10 | 1 | 2 | 7 | 0 | 33% [6%-79%] (n=3) |
| lifecycle | 40 | 0 | 23 | 17 | 0 | 0% [0%-14%] (n=23) |
| mcp | 20 | 0 | 5 | 15 | 0 | 0% [0%-43%] (n=5) |
| nearmiss | 50 | 1 | 3 | 9 | 37 | 25% [5%-70%] (n=4) |
| noisy | 5 | 0 | 0 | 5 | 0 | 0% [0%-100%] (n=0) |
| otel | 20 | 0 | 0 | 20 | 0 | 0% [0%-100%] (n=0) |
| packs | 40 | 0 | 36 | 4 | 0 | 0% [0%-10%] (n=36) |
| public/counterexample | 20 | 0 | 10 | 10 | 0 | 0% [0%-28%] (n=10) |
| public/domains | 50 | 0 | 10 | 40 | 0 | 0% [0%-28%] (n=10) |
| public/golden | 10 | 2 | 3 | 5 | 0 | 40% [12%-77%] (n=5) |
| public/nearmiss | 20 | 0 | 0 | 0 | 20 | 0% [0%-100%] (n=0) |
| public/staleness | 10 | 0 | 0 | 10 | 0 | 0% [0%-100%] (n=0) |
| public/synthetic | 30 | 0 | 13 | 17 | 0 | 0% [0%-23%] (n=13) |
| raw/ci | 110 | 0 | 6 | 104 | 0 | 0% [0%-39%] (n=6) |
| raw/corrections | 5 | 1 | 1 | 3 | 0 | 50% [9%-91%] (n=2) |
| raw/cross-session | 5 | 0 | 5 | 0 | 0 | 0% [0%-43%] (n=5) |
| raw/opencode | 25 | 7 | 11 | 7 | 0 | 39% [20%-61%] (n=18) |
| raw/sibling-repos | 10 | 1 | 0 | 9 | 0 | 100% [21%-100%] (n=1) |
| raw/synthetic | 145 | 21 | 41 | 83 | 0 | 34% [23%-46%] (n=62) |
| reference-expansion | 288 | 6 | 125 | 157 | 0 | 5% [2%-10%] (n=131) |
| successes | 60 | 0 | 0 | 0 | 60 | 0% [0%-100%] (n=0) |

