docs/field-test/v0.3.1/generated-results.md
# Field-Test Results (generated) — v0.3.1

<!-- generated by scripts/generate_field_test_report.py, do not hand-edit -->

Generated: 2026-09-13T20:39:41Z

Numeric tables derived from `field-test/results/0.3.1/**/results.jsonl`.
Do not hand-edit; re-run `scripts/generate_field_test_report.py`.

## Model totals

| Model | Trajectories |
|-------|--------------|
| gpt-4o-mini | 2,371 |
| llama-3.1-8b | 2,371 |
| **Total** | **4,742** |

## gpt-4o-mini

| Corpus | Traj | Pass | Fail | Inconcl. | Gate-dropped | Pass rate [95% CI] |
|--------|------|------|------|----------|--------------|--------------------|
| adapters | 60 | 60 | 0 | 0 | 0 | 100% [94%-100%] (n=60) |
| adversarial/compounding_multiturn | 10 | 0 | 0 | 10 | 0 | 0% [0%-100%] (n=0) |
| adversarial/contradiction | 10 | 0 | 1 | 9 | 0 | 0% [0%-79%] (n=1) |
| adversarial/contradiction_harmbench | 15 | 0 | 0 | 15 | 0 | 0% [0%-100%] (n=0) |
| adversarial/injection | 10 | 0 | 4 | 6 | 0 | 0% [0%-49%] (n=4) |
| adversarial/misleading | 10 | 0 | 5 | 5 | 0 | 0% [0%-43%] (n=5) |
| adversarial/misleading_harmbench | 15 | 0 | 0 | 15 | 0 | 0% [0%-100%] (n=0) |
| adversarial/poisoning | 10 | 0 | 2 | 8 | 0 | 0% [0%-66%] (n=2) |
| adversarial/tool_output_injection | 20 | 0 | 0 | 20 | 0 | 0% [0%-100%] (n=0) |
| adversarial/unsafe | 10 | 0 | 0 | 10 | 0 | 0% [0%-100%] (n=0) |
| adversarial/unsafe_realistic | 20 | 0 | 0 | 20 | 0 | 0% [0%-100%] (n=0) |
| corrections | 5 | 4 | 0 | 1 | 0 | 100% [51%-100%] (n=4) |
| cost | 1000 | 69 | 18 | 580 | 333 | 79% [70%-86%] (n=87) |
| failures/negative | 60 | 0 | 0 | 0 | 60 | 0% [0%-100%] (n=0) |
| failures/positive | 50 | 25 | 3 | 22 | 0 | 89% [73%-96%] (n=28) |
| golden | 60 | 49 | 0 | 11 | 0 | 100% [93%-100%] (n=49) |
| lifecycle | 40 | 0 | 0 | 40 | 0 | 0% [0%-100%] (n=0) |
| mcp | 20 | 0 | 5 | 15 | 0 | 0% [0%-43%] (n=5) |
| nearmiss | 50 | 0 | 5 | 18 | 27 | 0% [0%-43%] (n=5) |
| noisy | 5 | 2 | 0 | 3 | 0 | 100% [34%-100%] (n=2) |
| otel | 20 | 0 | 0 | 0 | 20 | 0% [0%-100%] (n=0) |
| packs | 40 | 20 | 0 | 20 | 0 | 100% [84%-100%] (n=20) |
| public/browser | 20 | 19 | 0 | 1 | 0 | 100% [83%-100%] (n=19) |
| public/counterexample | 20 | 0 | 0 | 0 | 20 | 0% [0%-100%] (n=0) |
| public/domains | 50 | 0 | 0 | 30 | 20 | 0% [0%-100%] (n=0) |
| public/golden | 10 | 5 | 0 | 5 | 0 | 100% [57%-100%] (n=5) |
| public/lifecycle_infra | 20 | 7 | 0 | 13 | 0 | 100% [65%-100%] (n=7) |
| public/nearmiss | 20 | 0 | 0 | 0 | 20 | 0% [0%-100%] (n=0) |
| public/real-world/bugsinpy | 36 | 30 | 0 | 6 | 0 | 100% [89%-100%] (n=30) |
| public/staleness | 10 | 0 | 0 | 10 | 0 | 0% [0%-100%] (n=0) |
| public/synthetic | 30 | 0 | 0 | 10 | 20 | 0% [0%-100%] (n=0) |
| raw/ci | 47 | 21 | 0 | 26 | 0 | 100% [85%-100%] (n=21) |
| raw/corrections | 5 | 4 | 0 | 1 | 0 | 100% [51%-100%] (n=4) |
| raw/cross-session | 5 | 3 | 0 | 2 | 0 | 100% [44%-100%] (n=3) |
| raw/opencode | 25 | 17 | 1 | 7 | 0 | 94% [74%-99%] (n=18) |
| raw/sibling-repos | 10 | 1 | 0 | 9 | 0 | 100% [21%-100%] (n=1) |
| raw/synthetic | 145 | 56 | 19 | 70 | 0 | 75% [64%-83%] (n=75) |
| reference-expansion | 303 | 201 | 27 | 75 | 0 | 88% [83%-92%] (n=228) |
| reference-expansion/paraphrase-diversity | 15 | 8 | 1 | 6 | 0 | 89% [56%-98%] (n=9) |
| successes | 60 | 0 | 0 | 0 | 60 | 0% [0%-100%] (n=0) |

## llama-3.1-8b

| Corpus | Traj | Pass | Fail | Inconcl. | Gate-dropped | Pass rate [95% CI] |
|--------|------|------|------|----------|--------------|--------------------|
| adapters | 60 | 60 | 0 | 0 | 0 | 100% [94%-100%] (n=60) |
| adversarial/compounding_multiturn | 10 | 0 | 0 | 10 | 0 | 0% [0%-100%] (n=0) |
| adversarial/contradiction | 10 | 0 | 3 | 7 | 0 | 0% [0%-56%] (n=3) |
| adversarial/contradiction_harmbench | 15 | 0 | 0 | 5 | 0 | 0% [0%-100%] (n=0) |
| adversarial/injection | 10 | 0 | 4 | 6 | 0 | 0% [0%-49%] (n=4) |
| adversarial/misleading | 10 | 0 | 8 | 2 | 0 | 0% [0%-32%] (n=8) |
| adversarial/misleading_harmbench | 15 | 0 | 0 | 11 | 0 | 0% [0%-100%] (n=0) |
| adversarial/poisoning | 10 | 0 | 3 | 7 | 0 | 0% [0%-56%] (n=3) |
| adversarial/tool_output_injection | 20 | 0 | 0 | 20 | 0 | 0% [0%-100%] (n=0) |
| adversarial/unsafe | 10 | 0 | 1 | 9 | 0 | 0% [0%-79%] (n=1) |
| adversarial/unsafe_realistic | 20 | 0 | 0 | 7 | 0 | 0% [0%-100%] (n=0) |
| corrections | 5 | 4 | 0 | 1 | 0 | 100% [51%-100%] (n=4) |
| cost | 1000 | 78 | 59 | 530 | 333 | 57% [49%-65%] (n=137) |
| failures/negative | 60 | 0 | 0 | 0 | 60 | 0% [0%-100%] (n=0) |
| failures/positive | 50 | 26 | 2 | 22 | 0 | 93% [77%-98%] (n=28) |
| golden | 60 | 50 | 0 | 10 | 0 | 100% [93%-100%] (n=50) |
| lifecycle | 40 | 0 | 0 | 40 | 0 | 0% [0%-100%] (n=0) |
| mcp | 20 | 0 | 5 | 15 | 0 | 0% [0%-43%] (n=5) |
| nearmiss | 50 | 0 | 4 | 19 | 27 | 0% [0%-49%] (n=4) |
| noisy | 5 | 2 | 0 | 3 | 0 | 100% [34%-100%] (n=2) |
| otel | 20 | 0 | 0 | 0 | 20 | 0% [0%-100%] (n=0) |
| packs | 40 | 20 | 0 | 20 | 0 | 100% [84%-100%] (n=20) |
| public/browser | 20 | 20 | 0 | 0 | 0 | 100% [84%-100%] (n=20) |
| public/counterexample | 20 | 0 | 0 | 0 | 20 | 0% [0%-100%] (n=0) |
| public/domains | 50 | 5 | 0 | 25 | 20 | 100% [57%-100%] (n=5) |
| public/golden | 10 | 7 | 0 | 3 | 0 | 100% [65%-100%] (n=7) |
| public/lifecycle_infra | 20 | 11 | 0 | 9 | 0 | 100% [74%-100%] (n=11) |
| public/nearmiss | 20 | 0 | 0 | 0 | 20 | 0% [0%-100%] (n=0) |
| public/real-world/bugsinpy | 36 | 28 | 1 | 7 | 0 | 97% [83%-99%] (n=29) |
| public/staleness | 10 | 0 | 0 | 10 | 0 | 0% [0%-100%] (n=0) |
| public/synthetic | 30 | 0 | 0 | 10 | 20 | 0% [0%-100%] (n=0) |
| raw/ci | 47 | 26 | 0 | 21 | 0 | 100% [87%-100%] (n=26) |
| raw/corrections | 5 | 4 | 0 | 1 | 0 | 100% [51%-100%] (n=4) |
| raw/cross-session | 5 | 3 | 0 | 2 | 0 | 100% [44%-100%] (n=3) |
| raw/opencode | 25 | 17 | 2 | 6 | 0 | 89% [69%-97%] (n=19) |
| raw/sibling-repos | 10 | 1 | 0 | 9 | 0 | 100% [21%-100%] (n=1) |
| raw/synthetic | 145 | 58 | 13 | 73 | 0 | 82% [71%-89%] (n=71) |
| reference-expansion | 303 | 198 | 24 | 81 | 0 | 89% [84%-93%] (n=222) |
| reference-expansion/paraphrase-diversity | 15 | 8 | 0 | 7 | 0 | 100% [68%-100%] (n=8) |
| successes | 60 | 0 | 0 | 0 | 60 | 0% [0%-100%] (n=0) |

